--- a/css/style3.css
+++ b/css/style3.css
@@ -280,6 +280,36 @@ nav .fa-solid{
 .print-button:hover {
     background-color: #2904af;
 }
+@media only screen and (max-width: 1170px) and (max-height: 2532px) {
+    #about {
+        margin-left: 170px;
+    }
+}
+
+@media only screen and (max-width: 3000px) and (max-height: 4000px) {
+    #about {
+        margin-left: 170px;
+    }
+}
+
+@media only screen and (max-width: 1080px) and (max-height: 2400px) {
+    #about {
+        margin-left: 170px;
+    }
+}
+
+@media only screen and (max-width: 1080px) and (max-height: 2340px) {
+    #about {
+        margin-left: 170px;
+    }
+}
+
+@media only screen and (max-width: 828px) and (max-height: 1792px) {
+    #about {
+        margin-left: 170px;
+    }
+}
+
 @media only screen and (max-width: 4600px){
     .header-text{
         margin-top: 100%;
