--- a/css/style2.css
+++ b/css/style2.css
@@ -230,37 +230,25 @@ nav .fa-solid{
     background-color: #2904af;
 }
 
-@media only screen and (max-width: 1170px) and (max-height: 2532px) {
-    #about {
-        margin-left: 170px;
-    }
-}
-
-@media only screen and (max-width: 3000px) and (max-height: 4000px) {
-    #about {
-        margin-left: 170px;
-    }
-}
-
-@media only screen and (max-width: 1080px) and (max-height: 2400px) {
-    #about {
-        margin-left: 170px;
-    }
-}
-
 @media only screen and (max-width: 1080px) and (max-height: 2340px) {
     #about {
         margin-left: 170px;
     }
-}
-
-@media only screen and (max-width: 828px) and (max-height: 1792px) {
-    #about {
-        margin-left: 170px;
+    img{
+        margin-top: 30px;
     }
 }
 
-@media only screen and (max-width: 4600px){
+@media only screen and (max-width: 768px) and (max-height: 1366px) {
+    #about {
+        margin-left: 170px;
+    }
+    img{
+        margin-top: 30px;
+    }
+}
+
+
     .header-text{
         margin-top: 100%;
         font-size: 16px;
@@ -328,4 +316,3 @@ nav .fa-solid{
     .services-list div a{
         color: #ffffff;
     }
-}
