--- a/css/style2.css
+++ b/css/style2.css
@@ -45,10 +45,34 @@ html{
     transition: background-color 0.3s;
 }
 
-#sidemenu li a:hover {
-    background-color: #f4f4f4;
+#sidemenu li.logout a {
+    color: #ff4d4d;
 }
 
+#sidemenu .submenu-items {
+    display: none;
+    list-style-type: none;
+    padding-left: 20px;
+    margin-top: 10px;
+}
+
+#sidemenu .submenu-items.open {
+    display: block;
+}
+
+#sidemenu .submenu-items li {
+    margin-bottom: 10px;
+}
+
+#sidemenu .submenu-items li a {
+    padding: 10px;
+    font-size: 16px;
+    color: #ffffff;
+}
+
+.rotate {
+    transform: rotate(180deg);
+}
 /* Adicionando um z-index maior para o conteúdo principal */
 .container {
     position: relative;
@@ -56,7 +80,6 @@ html{
 }
 
 nav{
-    display: flex;
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -243,9 +266,6 @@ nav .fa-solid{
     #about {
         margin-left: 170px;
     }
-    img{
-        margin-top: 60px;
-    }
 }
 
 
@@ -262,7 +282,6 @@ nav .fa-solid{
     }
     nav ul{
         background: #094412;
-        position: fixed;
         top: 0;
         left: 0; /* Alteração para o lado esquerdo */
         height: 100vh;
