--- a/css/style3.css
+++ b/css/style3.css
@@ -49,6 +49,34 @@ html{
     background-color: #f4f4f4;
 }
 
+#sidemenu li.logout a {
+    color: #ff4d4d;
+}
+
+#sidemenu .submenu-items {
+    display: none;
+    list-style-type: none;
+    padding-left: 20px;
+    margin-top: 10px;
+}
+
+#sidemenu .submenu-items.open {
+    display: block;
+}
+
+#sidemenu .submenu-items li {
+    margin-bottom: 10px;
+}
+
+#sidemenu .submenu-items li a {
+    padding: 10px;
+    font-size: 16px;
+    color: #ffffff;
+}
+
+.rotate {
+    transform: rotate(180deg);
+}
 /* Adicionando um z-index maior para o conteúdo principal */
 .container {
     position: relative;
@@ -311,7 +339,6 @@ nav .fa-solid{
     }
     nav ul{
         background: #094412;
-        position: fixed;
         top: 0;
         left: 0; /* Alteração para o lado esquerdo */
         height: 100vh;
